textarea + tree dd field  styling

--- a/css/layout.css
+++ b/css/layout.css
@@ -277,76 +277,80 @@
   border-color: #3ba1c7 !important;
 }
 /* line 345, ../scss/layout.scss */
-.field input {
+.field input,
+.field textarea,
+.field .TreeDropdownField {
   border-color: #d8d8dc !important;
 }
-/* line 348, ../scss/layout.scss */
-.field input:focus {
+/* line 350, ../scss/layout.scss */
+.field input:focus,
+.field textarea:focus,
+.field .TreeDropdownField:focus {
   border-color: #3ba1c7 !important;
 }
 
-/* line 354, ../scss/layout.scss */
+/* line 356, ../scss/layout.scss */
 .chzn-container-single .chzn-single {
   border-color: #d8d8dc !important;
 }
 
-/* line 363, ../scss/layout.scss */
+/* line 365, ../scss/layout.scss */
 .cms table.ss-gridfield-table tr.title th {
   background: #465762;
   border-color: #313d44;
 }
-/* line 370, ../scss/layout.scss */
+/* line 372, ../scss/layout.scss */
 .cms table.ss-gridfield-table tr th.main {
   background: #3ba1c7;
   border-color: #3492b5;
   border-top: none;
   border-left: none;
 }
-/* line 379, ../scss/layout.scss */
+/* line 381, ../scss/layout.scss */
 .cms table.ss-gridfield-table tr td.bottom-all {
   background: #465762;
   border-color: #313d44;
 }
-/* line 384, ../scss/layout.scss */
+/* line 386, ../scss/layout.scss */
 .cms table.ss-gridfield-table tr td:last-child, .cms table.ss-gridfield-table tr td:first-child {
   border-right-color: #f3f3f4;
 }
 
-/* line 394, ../scss/layout.scss */
+/* line 396, ../scss/layout.scss */
 .ss-loading-screen {
   background: #ffffff;
 }
 
-/* line 416, ../scss/layout.scss */
+/* line 418, ../scss/layout.scss */
 .ss-uploadfield .middleColumn {
   border-color: #d8d8dc !important;
 }
 
-/* line 421, ../scss/layout.scss */
+/* line 423, ../scss/layout.scss */
 div.field.has-border {
   border-bottom: none !important;
 }
 
-/* line 427, ../scss/layout.scss */
+/* line 429, ../scss/layout.scss */
 .defaultSkin td.mceToolbar {
   background: #f3f3f4 !important;
 }
-/* line 431, ../scss/layout.scss */
+/* line 433, ../scss/layout.scss */
 .defaultSkin a.mceButtonEnabled:hover {
   border: 1px solid #3492b5 !important;
   background-color: #3ba1c7 !important;
 }
-/* line 437, ../scss/layout.scss */
+/* line 439, ../scss/layout.scss */
 .defaultSkin table.mceLayout,
 .defaultSkin table.mceLayout tr.mceFirst td {
   border-color: #d8d8dc !important;
 }
-/* line 443, ../scss/layout.scss */
+/* line 445, ../scss/layout.scss */
 .defaultSkin .mceIframeContainer {
   border-color: #d8d8dc !important;
 }
 
-/* line 450, ../scss/layout.scss */
+/* line 452, ../scss/layout.scss */
 .field input[disabled],
 .field input.disabled,
 .field textarea[disabled],
@@ -364,7 +368,7 @@ div.field.has-border {
   background-image: linear-gradient(#eaeaea, #ffffff 10%);
   border-color: #d8d8dc;
 }
-/* line 467, ../scss/layout.scss */
+/* line 469, ../scss/layout.scss */
 .field input[disabled]:active, .field input[disabled]:focus,
 .field input.disabled:active,
 .field input.disabled:focus,
@@ -379,17 +383,17 @@ div.field.has-border {
   border-color: #DC363B !important;
 }
 
-/* line 474, ../scss/layout.scss */
+/* line 476, ../scss/layout.scss */
 span.disabled {
   opacity: 0.5;
 }
 
-/* line 479, ../scss/layout.scss */
+/* line 481, ../scss/layout.scss */
 button.ss-gridfield-add-new-inline {
   margin: 16px 0 8px 0 !important;
 }
 
-/* line 484, ../scss/layout.scss */
+/* line 486, ../scss/layout.scss */
 .ui-dialog {
   background: #ffffff;
   background-clip: content-box;
@@ -404,28 +408,28 @@ button.ss-gridfield-add-new-inline {
   box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.3);
 }
 
-/* line 498, ../scss/layout.scss */
+/* line 500, ../scss/layout.scss */
 .betterbuttons-nested-form {
   position: relative;
   color: #465762 !important;
 }
-/* line 503, ../scss/layout.scss */
+/* line 505, ../scss/layout.scss */
 .betterbuttons-nested-form fieldset > div:first-of-type {
   margin-top: 0;
 }
-/* line 506, ../scss/layout.scss */
+/* line 508, ../scss/layout.scss */
 .betterbuttons-nested-form fieldset > div:first-of-type label {
   padding-top: 0;
 }
-/* line 512, ../scss/layout.scss */
+/* line 514, ../scss/layout.scss */
 .betterbuttons-nested-form .field label.left {
   width: 100%;
 }
-/* line 516, ../scss/layout.scss */
+/* line 518, ../scss/layout.scss */
 .betterbuttons-nested-form strong {
   font-weight: bold;
 }
-/* line 520, ../scss/layout.scss */
+/* line 522, ../scss/layout.scss */
 .betterbuttons-nested-form form {
   position: absolute;
   top: 50%;
@@ -438,7 +442,7 @@ button.ss-gridfield-add-new-inline {
   margin: 0;
   width: 512px;
 }
-/* line 533, ../scss/layout.scss */
+/* line 535, ../scss/layout.scss */
 .betterbuttons-nested-form select.dropdown {
   margin-left: 0;
   height: 30px;
@@ -464,7 +468,7 @@ button.ss-gridfield-add-new-inline {
   color: #465762;
   text-decoration: none;
 }
-/* line 559, ../scss/layout.scss */
+/* line 561, ../scss/layout.scss */
 .betterbuttons-nested-form select.dropdown:focus, .betterbuttons-nested-form select.dropdown:active {
   outline: none;
   -webkit-border-radius: 5px 5px 0 0;
@@ -473,72 +477,72 @@ button.ss-gridfield-add-new-inline {
   border-color: #3ba1c7 !important;
 }
 
-/* line 574, ../scss/layout.scss */
+/* line 576, ../scss/layout.scss */
 .cf, .fieldgroup-50, .fieldgroup-33, .cms-login-status {
   *zoom: 1;
 }
-/* line 577, ../scss/layout.scss */
+/* line 579, ../scss/layout.scss */
 .cf:before, .fieldgroup-50:before, .fieldgroup-33:before, .cms-login-status:before, .cf:after, .fieldgroup-50:after, .fieldgroup-33:after, .cms-login-status:after {
   content: '';
   display: table;
 }
-/* line 582, ../scss/layout.scss */
+/* line 584, ../scss/layout.scss */
 .cf:after, .fieldgroup-50:after, .fieldgroup-33:after, .cms-login-status:after {
   clear: both;
 }
 
-/* line 587, ../scss/layout.scss */
+/* line 589, ../scss/layout.scss */
 .clear {
   clear: both;
 }
-/* line 590, ../scss/layout.scss */
+/* line 592, ../scss/layout.scss */
 .clear.optionset {
   clear: none;
 }
-/* line 593, ../scss/layout.scss */
+/* line 595, ../scss/layout.scss */
 .clear.optionset.field {
   clear: both;
 }
 
-/* line 601, ../scss/layout.scss */
+/* line 603, ../scss/layout.scss */
 .field.full {
   width: 100%;
   margin-left: 0;
 }
-/* line 605, ../scss/layout.scss */
+/* line 607, ../scss/layout.scss */
 .field.full + div {
   margin-left: 0;
 }
-/* line 610, ../scss/layout.scss */
+/* line 612, ../scss/layout.scss */
 .field.has-border {
   padding: 0px 0px 7px !important;
   margin: 8px 0px !important;
   border-bottom: 1px solid #f3f3f4 !important;
 }
-/* line 616, ../scss/layout.scss */
+/* line 618, ../scss/layout.scss */
 .field.no-border {
   padding: 0px !important;
   margin: 0px !important;
   border-bottom: 0 !important;
 }
 
-/* line 626, ../scss/layout.scss */
+/* line 628, ../scss/layout.scss */
 .optionset.full li {
   width: auto;
   margin-right: 2em;
 }
 
-/* line 634, ../scss/layout.scss */
+/* line 636, ../scss/layout.scss */
 .field-with-extra {
   float: left;
   margin-top: 0;
 }
-/* line 638, ../scss/layout.scss */
+/* line 640, ../scss/layout.scss */
 .field-with-extra input {
   width: 512px !important;
 }
 
-/* line 643, ../scss/layout.scss */
+/* line 645, ../scss/layout.scss */
 .field-extra {
   float: left;
   margin-top: 0;
@@ -547,73 +551,73 @@ button.ss-gridfield-add-new-inline {
   margin-bottom: 0;
 }
 
-/* line 652, ../scss/layout.scss */
+/* line 654, ../scss/layout.scss */
 .no-label label {
   display: none !important;
 }
-/* line 656, ../scss/layout.scss */
+/* line 658, ../scss/layout.scss */
 .no-label .middleColumn {
   margin-left: 0;
 }
 
-/* line 665, ../scss/layout.scss */
+/* line 667, ../scss/layout.scss */
 .fieldgroup-50 > * {
   float: left;
   width: 49.25%;
 }
-/* line 669, ../scss/layout.scss */
+/* line 671, ../scss/layout.scss */
 .fieldgroup-50 > *:nth-of-type(2n+2) {
   margin-left: 1.5%;
 }
-/* line 673, ../scss/layout.scss */
+/* line 675, ../scss/layout.scss */
 .fieldgroup-50 > *.full {
   width: 100%;
   margin-left: 0;
 }
-/* line 678, ../scss/layout.scss */
+/* line 680, ../scss/layout.scss */
 .fieldgroup-50 > *.left {
   margin-left: 0;
 }
-/* line 682, ../scss/layout.scss */
+/* line 684, ../scss/layout.scss */
 .fieldgroup-50 > *.right {
   margin-left: 1.5%;
 }
 
-/* line 692, ../scss/layout.scss */
+/* line 694, ../scss/layout.scss */
 .fieldgroup-33 > * {
   float: left;
   width: 32.33%;
 }
-/* line 696, ../scss/layout.scss */
+/* line 698, ../scss/layout.scss */
 .fieldgroup-33 > *:nth-of-type(2n+2), .fieldgroup-33 > *:nth-of-type(3n+3) {
   margin-left: 1.5%;
 }
-/* line 701, ../scss/layout.scss */
+/* line 703, ../scss/layout.scss */
 .fieldgroup-33 > *.full {
   width: 100%;
   margin-left: 0;
 }
-/* line 706, ../scss/layout.scss */
+/* line 708, ../scss/layout.scss */
 .fieldgroup-33 > *.left {
   margin-left: 0;
 }
-/* line 710, ../scss/layout.scss */
+/* line 712, ../scss/layout.scss */
 .fieldgroup-33 > *.right {
   margin-left: 1.5%;
 }
 
-/* line 718, ../scss/layout.scss */
+/* line 720, ../scss/layout.scss */
 .field-50.composite, .field-50.field {
   float: left;
   width: 49.25%;
   margin-top: 0;
 }
-/* line 724, ../scss/layout.scss */
+/* line 726, ../scss/layout.scss */
 .field-50.composite + .field-50, .field-50.field + .field-50 {
   margin-left: 1.5%;
 }
 
-/* line 732, ../scss/layout.scss */
+/* line 734, ../scss/layout.scss */
 .highlighted.composite {
   float: left;
   width: auto;
@@ -621,49 +625,54 @@ button.ss-gridfield-add-new-inline {
   padding: 16px;
   background: #f3f3f4;
 }
-/* line 739, ../scss/layout.scss */
+/* line 741, ../scss/layout.scss */
 .highlighted.composite > h2 {
   margin: 0 0 16px 0;
   line-height: 1;
 }
-/* line 745, ../scss/layout.scss */
+/* line 747, ../scss/layout.scss */
 .highlighted.field {
   color: #3ba1c7;
   font-weight: bold;
 }
 
-/* line 752, ../scss/layout.scss */
+/* line 754, ../scss/layout.scss */
 .chzn-container {
   width: 100% !important;
 }
 
-/* line 756, ../scss/layout.scss */
+/* line 758, ../scss/layout.scss */
 .chzn-container .chzn-drop {
   width: calc(100% - 2px) !important;
 }
 
-/* line 762, ../scss/layout.scss */
+/* line 764, ../scss/layout.scss */
 .cms-content-header.north .cms_backlink {
   display: none;
 }
 
-/* line 767, ../scss/layout.scss */
+/* line 769, ../scss/layout.scss */
 .better-buttons-utils,
 .dashboard-top-buttons {
   top: 12px !important;
 }
 
-/* line 776, ../scss/layout.scss */
+/* line 778, ../scss/layout.scss */
 .cms-login-status .logout-link {
   float: left;
   display: block;
   padding: 0;
   margin-right: 5px;
 }
-/* line 783, ../scss/layout.scss */
+/* line 785, ../scss/layout.scss */
 .cms-login-status span {
   display: block;
   float: left;
   padding: 0;
   width: calc(100% - 21px);
+}
+
+/* line 794, ../scss/layout.scss */
+.LinkFormFieldLinkmode .chzn-container {
+  width: 130px !important;
 }
