--- a/css/layout.css
+++ b/css/layout.css
@@ -346,21 +346,24 @@ div.field.has-border {
   background: #f3f3f4 !important;
 }
 /* line 441, ../scss/layout.scss */
+.defaultSkin .mceButton {
+  border: none !important;
+}
+/* line 445, ../scss/layout.scss */
 .defaultSkin a.mceButtonEnabled:hover {
-  border: 1px solid #3492b5 !important;
   background-color: #3ba1c7 !important;
 }
-/* line 447, ../scss/layout.scss */
+/* line 450, ../scss/layout.scss */
 .defaultSkin table.mceLayout,
 .defaultSkin table.mceLayout tr.mceFirst td {
   border-color: #d8d8dc !important;
 }
-/* line 453, ../scss/layout.scss */
+/* line 456, ../scss/layout.scss */
 .defaultSkin .mceIframeContainer {
   border-color: #d8d8dc !important;
 }
 
-/* line 460, ../scss/layout.scss */
+/* line 463, ../scss/layout.scss */
 .field input[disabled],
 .field input.disabled,
 .field textarea[disabled],
@@ -378,7 +381,7 @@ div.field.has-border {
   background-image: linear-gradient(#eaeaea, #ffffff 10%);
   border-color: #d8d8dc;
 }
-/* line 477, ../scss/layout.scss */
+/* line 480, ../scss/layout.scss */
 .field input[disabled]:active, .field input[disabled]:focus,
 .field input.disabled:active,
 .field input.disabled:focus,
@@ -393,17 +396,17 @@ div.field.has-border {
   border-color: #DC363B !important;
 }
 
-/* line 484, ../scss/layout.scss */
+/* line 487, ../scss/layout.scss */
 span.disabled {
   opacity: 0.5;
 }
 
-/* line 489, ../scss/layout.scss */
+/* line 492, ../scss/layout.scss */
 button.ss-gridfield-add-new-inline {
   margin: 16px 0 8px 0 !important;
 }
 
-/* line 494, ../scss/layout.scss */
+/* line 497, ../scss/layout.scss */
 .ui-dialog {
   background: #ffffff;
   background-clip: content-box;
@@ -417,29 +420,42 @@ button.ss-gridfield-add-new-inline {
   -webkit-box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.3);
 }
+/* line 510, ../scss/layout.scss */
+.ui-dialog .cms-content-header {
+  margin-top: 0 !important;
+}
+/* line 514, ../scss/layout.scss */
+.ui-dialog .cms-dialog-content {
+  background: #ffffff;
+}
 
-/* line 508, ../scss/layout.scss */
+/* line 520, ../scss/layout.scss */
+select, select.dropdown {
+  border-color: #d8d8dc !important;
+}
+
+/* line 526, ../scss/layout.scss */
 .betterbuttons-nested-form {
   position: relative;
   color: #465762 !important;
 }
-/* line 513, ../scss/layout.scss */
+/* line 531, ../scss/layout.scss */
 .betterbuttons-nested-form fieldset > div:first-of-type {
   margin-top: 0;
 }
-/* line 516, ../scss/layout.scss */
+/* line 534, ../scss/layout.scss */
 .betterbuttons-nested-form fieldset > div:first-of-type label {
   padding-top: 0;
 }
-/* line 522, ../scss/layout.scss */
+/* line 540, ../scss/layout.scss */
 .betterbuttons-nested-form .field label.left {
   width: 100%;
 }
-/* line 526, ../scss/layout.scss */
+/* line 544, ../scss/layout.scss */
 .betterbuttons-nested-form strong {
   font-weight: bold;
 }
-/* line 530, ../scss/layout.scss */
+/* line 548, ../scss/layout.scss */
 .betterbuttons-nested-form form {
   position: absolute;
   top: 50%;
@@ -452,7 +468,7 @@ button.ss-gridfield-add-new-inline {
   margin: 0;
   width: 512px;
 }
-/* line 543, ../scss/layout.scss */
+/* line 561, ../scss/layout.scss */
 .betterbuttons-nested-form select.dropdown {
   margin-left: 0;
   height: 30px;
@@ -478,7 +494,7 @@ button.ss-gridfield-add-new-inline {
   color: #465762;
   text-decoration: none;
 }
-/* line 569, ../scss/layout.scss */
+/* line 587, ../scss/layout.scss */
 .betterbuttons-nested-form select.dropdown:focus, .betterbuttons-nested-form select.dropdown:active {
   outline: none;
   -webkit-border-radius: 5px 5px 0 0;
@@ -487,72 +503,77 @@ button.ss-gridfield-add-new-inline {
   border-color: #3ba1c7 !important;
 }
 
-/* line 584, ../scss/layout.scss */
+/* line 602, ../scss/layout.scss */
 .cf, .fieldgroup-50, .fieldgroup-33, .cms-login-status {
   *zoom: 1;
 }
-/* line 587, ../scss/layout.scss */
+/* line 605, ../scss/layout.scss */
 .cf:before, .fieldgroup-50:before, .fieldgroup-33:before, .cms-login-status:before, .cf:after, .fieldgroup-50:after, .fieldgroup-33:after, .cms-login-status:after {
   content: '';
   display: table;
 }
-/* line 592, ../scss/layout.scss */
+/* line 610, ../scss/layout.scss */
 .cf:after, .fieldgroup-50:after, .fieldgroup-33:after, .cms-login-status:after {
   clear: both;
 }
 
-/* line 597, ../scss/layout.scss */
+/* line 615, ../scss/layout.scss */
 .clear {
   clear: both;
 }
-/* line 600, ../scss/layout.scss */
+/* line 618, ../scss/layout.scss */
 .clear.optionset {
   clear: none;
 }
-/* line 603, ../scss/layout.scss */
+/* line 621, ../scss/layout.scss */
 .clear.optionset.field {
   clear: both;
 }
 
-/* line 611, ../scss/layout.scss */
+/* line 629, ../scss/layout.scss */
 .field.full {
   width: 100%;
   margin-left: 0;
 }
-/* line 615, ../scss/layout.scss */
+/* line 633, ../scss/layout.scss */
 .field.full + div {
   margin-left: 0;
 }
-/* line 620, ../scss/layout.scss */
+/* line 638, ../scss/layout.scss */
 .field.has-border {
   padding: 0px 0px 7px !important;
   margin: 8px 0px !important;
   border-bottom: 1px solid #f3f3f4 !important;
 }
-/* line 626, ../scss/layout.scss */
+/* line 644, ../scss/layout.scss */
 .field.no-border {
   padding: 0px !important;
   margin: 0px !important;
   border-bottom: 0 !important;
 }
 
-/* line 636, ../scss/layout.scss */
+/* line 653, ../scss/layout.scss */
+.optionset li {
+  min-width: 220px;
+  width: auto;
+}
+/* line 659, ../scss/layout.scss */
 .optionset.full li {
   width: auto;
   margin-right: 2em;
 }
 
-/* line 644, ../scss/layout.scss */
+/* line 667, ../scss/layout.scss */
 .field-with-extra {
   float: left;
   margin-top: 0;
 }
-/* line 648, ../scss/layout.scss */
+/* line 671, ../scss/layout.scss */
 .field-with-extra input {
   width: 512px !important;
 }
 
-/* line 653, ../scss/layout.scss */
+/* line 676, ../scss/layout.scss */
 .field-extra {
   float: left;
   margin-top: 0;
@@ -561,73 +582,73 @@ button.ss-gridfield-add-new-inline {
   margin-bottom: 0;
 }
 
-/* line 662, ../scss/layout.scss */
+/* line 685, ../scss/layout.scss */
 .no-label label {
   display: none !important;
 }
-/* line 666, ../scss/layout.scss */
+/* line 689, ../scss/layout.scss */
 .no-label .middleColumn {
   margin-left: 0;
 }
 
-/* line 675, ../scss/layout.scss */
+/* line 698, ../scss/layout.scss */
 .fieldgroup-50 > * {
   float: left;
   width: 49.25%;
 }
-/* line 679, ../scss/layout.scss */
+/* line 702, ../scss/layout.scss */
 .fieldgroup-50 > *:nth-of-type(2n+2) {
   margin-left: 1.5%;
 }
-/* line 683, ../scss/layout.scss */
+/* line 706, ../scss/layout.scss */
 .fieldgroup-50 > *.full {
   width: 100%;
   margin-left: 0;
 }
-/* line 688, ../scss/layout.scss */
+/* line 711, ../scss/layout.scss */
 .fieldgroup-50 > *.left {
   margin-left: 0;
 }
-/* line 692, ../scss/layout.scss */
+/* line 715, ../scss/layout.scss */
 .fieldgroup-50 > *.right {
   margin-left: 1.5%;
 }
 
-/* line 702, ../scss/layout.scss */
+/* line 725, ../scss/layout.scss */
 .fieldgroup-33 > * {
   float: left;
   width: 32.33%;
 }
-/* line 706, ../scss/layout.scss */
+/* line 729, ../scss/layout.scss */
 .fieldgroup-33 > *:nth-of-type(2n+2), .fieldgroup-33 > *:nth-of-type(3n+3) {
   margin-left: 1.5%;
 }
-/* line 711, ../scss/layout.scss */
+/* line 734, ../scss/layout.scss */
 .fieldgroup-33 > *.full {
   width: 100%;
   margin-left: 0;
 }
-/* line 716, ../scss/layout.scss */
+/* line 739, ../scss/layout.scss */
 .fieldgroup-33 > *.left {
   margin-left: 0;
 }
-/* line 720, ../scss/layout.scss */
+/* line 743, ../scss/layout.scss */
 .fieldgroup-33 > *.right {
   margin-left: 1.5%;
 }
 
-/* line 728, ../scss/layout.scss */
+/* line 751, ../scss/layout.scss */
 .field-50.composite, .field-50.field {
   float: left;
   width: 49.25%;
   margin-top: 0;
 }
-/* line 734, ../scss/layout.scss */
+/* line 757, ../scss/layout.scss */
 .field-50.composite + .field-50, .field-50.field + .field-50 {
   margin-left: 1.5%;
 }
 
-/* line 742, ../scss/layout.scss */
+/* line 765, ../scss/layout.scss */
 .highlighted.composite {
   float: left;
   width: auto;
@@ -635,46 +656,46 @@ button.ss-gridfield-add-new-inline {
   padding: 16px;
   background: #f3f3f4;
 }
-/* line 749, ../scss/layout.scss */
+/* line 772, ../scss/layout.scss */
 .highlighted.composite > h2 {
   margin: 0 0 16px 0;
   line-height: 1;
 }
-/* line 755, ../scss/layout.scss */
+/* line 778, ../scss/layout.scss */
 .highlighted.field {
   color: #3ba1c7;
   font-weight: bold;
 }
 
-/* line 762, ../scss/layout.scss */
+/* line 785, ../scss/layout.scss */
 .chzn-container {
   width: 100% !important;
 }
 
-/* line 766, ../scss/layout.scss */
+/* line 789, ../scss/layout.scss */
 .chzn-container .chzn-drop {
   width: calc(100% - 2px) !important;
 }
 
-/* line 772, ../scss/layout.scss */
+/* line 795, ../scss/layout.scss */
 .cms-content-header.north .cms_backlink {
   display: none;
 }
 
-/* line 777, ../scss/layout.scss */
+/* line 800, ../scss/layout.scss */
 .better-buttons-utils,
 .dashboard-top-buttons {
   top: 12px !important;
 }
 
-/* line 786, ../scss/layout.scss */
+/* line 809, ../scss/layout.scss */
 .cms-login-status .logout-link {
   float: left;
   display: block;
   padding: 0;
   margin-right: 5px;
 }
-/* line 793, ../scss/layout.scss */
+/* line 816, ../scss/layout.scss */
 .cms-login-status span {
   display: block;
   float: left;
@@ -682,7 +703,7 @@ button.ss-gridfield-add-new-inline {
   width: calc(100% - 21px);
 }
 
-/* line 802, ../scss/layout.scss */
+/* line 825, ../scss/layout.scss */
 .LinkFormFieldLinkmode .chzn-container {
   width: 130px !important;
 }
