--- a/css/layout.css
+++ b/css/layout.css
@@ -183,61 +183,73 @@
   color: #465762;
 }
 /* line 241, ../scss/layout.scss */
-.cms-menu .cms-panel-content.center .cms-menu-list li:hover a {
+.cms-menu .cms-panel-content.center .cms-menu-list li:hover > a {
   color: #ffffff;
   background: #3ba1c7;
 }
 /* line 254, ../scss/layout.scss */
-.cms-menu .cms-panel-content.center .cms-menu-list li.current a {
+.cms-menu .cms-panel-content.center .cms-menu-list li.current > a {
   background: #3ba1c7;
   color: #ffffff;
 }
 /* line 258, ../scss/layout.scss */
-.cms-menu .cms-panel-content.center .cms-menu-list li.current a:hover {
+.cms-menu .cms-panel-content.center .cms-menu-list li.current > a:hover {
   background: #3492b5;
 }
 /* line 264, ../scss/layout.scss */
 .cms-menu .cms-panel-content.center .cms-menu-list li.current.opened a {
   border-top: none;
 }
-/* line 275, ../scss/layout.scss */
+/* line 273, ../scss/layout.scss */
+.cms-menu .cms-panel-content.center .cms-menu-list li.children > ul li a {
+  background: #d8d8dc;
+}
+/* line 276, ../scss/layout.scss */
+.cms-menu .cms-panel-content.center .cms-menu-list li.children > ul li a:hover {
+  background: #3492b5;
+}
+/* line 282, ../scss/layout.scss */
+.cms-menu .cms-panel-content.center .cms-menu-list li.children > ul li.current a {
+  background: #3492b5;
+}
+/* line 295, ../scss/layout.scss */
 .cms-menu .cms-panel-toggle.south {
   border-top: 1px solid #d8d8dc;
 }
-/* line 280, ../scss/layout.scss */
+/* line 300, ../scss/layout.scss */
 .cms-menu .cms-panel-toggle a span {
   color: #465762 !important;
 }
 
-/* line 288, ../scss/layout.scss */
+/* line 308, ../scss/layout.scss */
 .rightsidebar {
   background: #f3f3f4;
   border-left: none !important;
 }
 
-/* line 294, ../scss/layout.scss */
+/* line 314, ../scss/layout.scss */
 .cms-panel.cms-content-tools .cms-panel-toggle.south {
   background: #f3f3f4 !important;
 }
 
-/* line 298, ../scss/layout.scss */
+/* line 318, ../scss/layout.scss */
 .cms-panel.cms-content-tools .cms-panel-toggle.south {
   border-top: 1px solid #d8d8dc !important;
 }
 
-/* line 302, ../scss/layout.scss */
+/* line 322, ../scss/layout.scss */
 .cms-content-tools .cms-panel-header {
   border-color: #d8d8dc !important;
 }
 
-/* line 307, ../scss/layout.scss */
+/* line 327, ../scss/layout.scss */
 .cms a.icon-button.font-icon-search,
 .cms .ui-tabs .ui-tabs-nav li a.font-icon-search.icon-button,
 .ui-tabs .ui-tabs-nav li .cms a.font-icon-search.icon-button,
 .cms button.ss-ui-button.icon-button.font-icon-search {
   color: #465762;
 }
-/* line 313, ../scss/layout.scss */
+/* line 333, ../scss/layout.scss */
 .cms a.icon-button.font-icon-search:hover,
 .cms .ui-tabs .ui-tabs-nav li a.font-icon-search.icon-button:hover,
 .ui-tabs .ui-tabs-nav li .cms a.font-icon-search.icon-button:hover,
@@ -245,141 +257,141 @@
   color: #3ba1c7;
 }
 
-/* line 320, ../scss/layout.scss */
+/* line 340, ../scss/layout.scss */
 .ui-tabs .ui-tabs-nav .ui-state-default a:hover {
   color: #3ba1c7;
 }
 
-/* line 325, ../scss/layout.scss */
+/* line 345, ../scss/layout.scss */
 .ui-tabs.cms-tabset-primary .ui-tabs-nav .ui-state-active a,
 .ui-tabs .ui-tabs-nav.cms-tabset-nav-primary .ui-state-active a,
 .ui-tabs .cms-content-header-tabs .ui-tabs-nav .ui-state-active a {
   border-bottom-color: #465762;
 }
 
-/* line 332, ../scss/layout.scss */
+/* line 352, ../scss/layout.scss */
 .ui-widget-content,
 .ui-widget {
   color: #465762;
 }
 
-/* line 338, ../scss/layout.scss */
+/* line 358, ../scss/layout.scss */
 .chzn-container-single .chzn-single {
   color: #465762;
 }
 
-/* line 342, ../scss/layout.scss */
+/* line 362, ../scss/layout.scss */
 .chzn-container .chzn-drop {
   color: #465762;
   border-color: #d8d8dc;
 }
 
-/* line 347, ../scss/layout.scss */
+/* line 367, ../scss/layout.scss */
 .chzn-container-active .chzn-drop {
   border-color: #3ba1c7 !important;
 }
 
-/* line 351, ../scss/layout.scss */
+/* line 371, ../scss/layout.scss */
 .chzn-container .chzn-choices {
   border-color: #d8d8dc !important;
 }
 
-/* line 355, ../scss/layout.scss */
+/* line 375, ../scss/layout.scss */
 .chzn-container-active .chzn-choices {
   border-color: #3ba1c7 !important;
 }
 
-/* line 359, ../scss/layout.scss */
+/* line 379, ../scss/layout.scss */
 .chzn-container .chzn-results .highlighted {
   background: #3ba1c7;
 }
 
-/* line 363, ../scss/layout.scss */
+/* line 383, ../scss/layout.scss */
 .field {
   border: none !important;
 }
-/* line 367, ../scss/layout.scss */
+/* line 387, ../scss/layout.scss */
 .field .chzn-container-active .chzn-single {
   border-color: #3ba1c7 !important;
 }
-/* line 371, ../scss/layout.scss */
+/* line 391, ../scss/layout.scss */
 .field input,
 .field textarea,
 .field .TreeDropdownField {
   border-color: #d8d8dc !important;
 }
-/* line 376, ../scss/layout.scss */
+/* line 396, ../scss/layout.scss */
 .field input:focus,
 .field textarea:focus,
 .field .TreeDropdownField:focus {
   border-color: #3ba1c7 !important;
 }
 
-/* line 382, ../scss/layout.scss */
+/* line 402, ../scss/layout.scss */
 .chzn-container-single .chzn-single {
   border-color: #d8d8dc !important;
 }
 
-/* line 391, ../scss/layout.scss */
+/* line 411, ../scss/layout.scss */
 .cms table.ss-gridfield-table tr.title th {
   background: #465762;
   border-color: #313d44;
 }
-/* line 398, ../scss/layout.scss */
+/* line 418, ../scss/layout.scss */
 .cms table.ss-gridfield-table tr th.main {
   background: #3ba1c7;
   border-color: #3492b5;
   border-top: none;
   border-left: none;
 }
-/* line 407, ../scss/layout.scss */
+/* line 427, ../scss/layout.scss */
 .cms table.ss-gridfield-table tr td.bottom-all {
   background: #465762;
   border-color: #313d44;
 }
-/* line 412, ../scss/layout.scss */
+/* line 432, ../scss/layout.scss */
 .cms table.ss-gridfield-table tr td:last-child, .cms table.ss-gridfield-table tr td:first-child {
   border-right-color: #f3f3f4;
 }
 
-/* line 422, ../scss/layout.scss */
+/* line 442, ../scss/layout.scss */
 .ss-loading-screen {
   background: #ffffff;
 }
 
-/* line 444, ../scss/layout.scss */
+/* line 464, ../scss/layout.scss */
 .ss-uploadfield .middleColumn {
   border-color: #d8d8dc !important;
 }
 
-/* line 449, ../scss/layout.scss */
+/* line 469, ../scss/layout.scss */
 div.field.has-border {
   border-bottom: none !important;
 }
 
-/* line 455, ../scss/layout.scss */
+/* line 475, ../scss/layout.scss */
 .defaultSkin td.mceToolbar {
   background: #f3f3f4 !important;
 }
-/* line 459, ../scss/layout.scss */
+/* line 479, ../scss/layout.scss */
 .defaultSkin .mceButton {
   border: none !important;
 }
-/* line 463, ../scss/layout.scss */
+/* line 483, ../scss/layout.scss */
 .defaultSkin a.mceButtonEnabled:hover {
   background-color: #3ba1c7 !important;
 }
-/* line 468, ../scss/layout.scss */
+/* line 488, ../scss/layout.scss */
 .defaultSkin table.mceLayout,
 .defaultSkin table.mceLayout tr.mceFirst td {
   border-color: #d8d8dc !important;
 }
-/* line 474, ../scss/layout.scss */
+/* line 494, ../scss/layout.scss */
 .defaultSkin .mceIframeContainer {
   border-color: #d8d8dc !important;
 }
 
-/* line 481, ../scss/layout.scss */
+/* line 501, ../scss/layout.scss */
 .field input[disabled],
 .field input.disabled,
 .field textarea[disabled],
@@ -397,7 +409,7 @@ div.field.has-border {
   background-image: linear-gradient(#eaeaea, #ffffff 10%);
   border-color: #d8d8dc;
 }
-/* line 498, ../scss/layout.scss */
+/* line 518, ../scss/layout.scss */
 .field input[disabled]:active, .field input[disabled]:focus,
 .field input.disabled:active,
 .field input.disabled:focus,
@@ -412,17 +424,17 @@ div.field.has-border {
   border-color: #DC363B !important;
 }
 
-/* line 505, ../scss/layout.scss */
+/* line 525, ../scss/layout.scss */
 span.disabled {
   opacity: 0.5;
 }
 
-/* line 510, ../scss/layout.scss */
+/* line 530, ../scss/layout.scss */
 button.ss-gridfield-add-new-inline {
   margin: 16px 0 8px 0 !important;
 }
 
-/* line 515, ../scss/layout.scss */
+/* line 535, ../scss/layout.scss */
 .ui-dialog {
   background: #ffffff;
   background-clip: content-box;
@@ -436,42 +448,42 @@ button.ss-gridfield-add-new-inline {
   -webkit-box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 0px 30px 10px rgba(0, 0, 0, 0.3);
 }
-/* line 528, ../scss/layout.scss */
+/* line 548, ../scss/layout.scss */
 .ui-dialog .cms-content-header {
   margin-top: 0 !important;
 }
-/* line 532, ../scss/layout.scss */
+/* line 552, ../scss/layout.scss */
 .ui-dialog .cms-dialog-content {
   background: #ffffff;
 }
 
-/* line 538, ../scss/layout.scss */
+/* line 558, ../scss/layout.scss */
 select, select.dropdown {
   border-color: #d8d8dc !important;
 }
 
-/* line 544, ../scss/layout.scss */
+/* line 564, ../scss/layout.scss */
 .betterbuttons-nested-form {
   position: relative;
   color: #465762 !important;
 }
-/* line 549, ../scss/layout.scss */
+/* line 569, ../scss/layout.scss */
 .betterbuttons-nested-form fieldset > div:first-of-type {
   margin-top: 0;
 }
-/* line 552, ../scss/layout.scss */
+/* line 572, ../scss/layout.scss */
 .betterbuttons-nested-form fieldset > div:first-of-type label {
   padding-top: 0;
 }
-/* line 558, ../scss/layout.scss */
+/* line 578, ../scss/layout.scss */
 .betterbuttons-nested-form .field label.left {
   width: 100%;
 }
-/* line 562, ../scss/layout.scss */
+/* line 582, ../scss/layout.scss */
 .betterbuttons-nested-form strong {
   font-weight: bold;
 }
-/* line 566, ../scss/layout.scss */
+/* line 586, ../scss/layout.scss */
 .betterbuttons-nested-form form {
   position: absolute;
   top: 50%;
@@ -484,7 +496,7 @@ select, select.dropdown {
   margin: 0;
   width: 512px;
 }
-/* line 579, ../scss/layout.scss */
+/* line 599, ../scss/layout.scss */
 .betterbuttons-nested-form select.dropdown {
   margin-left: 0;
   height: 30px;
@@ -510,7 +522,7 @@ select, select.dropdown {
   color: #465762;
   text-decoration: none;
 }
-/* line 605, ../scss/layout.scss */
+/* line 625, ../scss/layout.scss */
 .betterbuttons-nested-form select.dropdown:focus, .betterbuttons-nested-form select.dropdown:active {
   outline: none;
   -webkit-border-radius: 5px 5px 0 0;
@@ -519,77 +531,77 @@ select, select.dropdown {
   border-color: #3ba1c7 !important;
 }
 
-/* line 620, ../scss/layout.scss */
+/* line 640, ../scss/layout.scss */
 .cf, .fieldgroup-50, .fieldgroup-33, .cms-login-status {
   *zoom: 1;
 }
-/* line 623, ../scss/layout.scss */
+/* line 643, ../scss/layout.scss */
 .cf:before, .fieldgroup-50:before, .fieldgroup-33:before, .cms-login-status:before, .cf:after, .fieldgroup-50:after, .fieldgroup-33:after, .cms-login-status:after {
   content: '';
   display: table;
 }
-/* line 628, ../scss/layout.scss */
+/* line 648, ../scss/layout.scss */
 .cf:after, .fieldgroup-50:after, .fieldgroup-33:after, .cms-login-status:after {
   clear: both;
 }
 
-/* line 633, ../scss/layout.scss */
+/* line 653, ../scss/layout.scss */
 .clear {
   clear: both;
 }
-/* line 636, ../scss/layout.scss */
+/* line 656, ../scss/layout.scss */
 .clear.optionset {
   clear: none;
 }
-/* line 639, ../scss/layout.scss */
+/* line 659, ../scss/layout.scss */
 .clear.optionset.field {
   clear: both;
 }
 
-/* line 647, ../scss/layout.scss */
+/* line 667, ../scss/layout.scss */
 .field.full {
   width: 100%;
   margin-left: 0;
 }
-/* line 651, ../scss/layout.scss */
+/* line 671, ../scss/layout.scss */
 .field.full + div {
   margin-left: 0;
 }
-/* line 656, ../scss/layout.scss */
+/* line 676, ../scss/layout.scss */
 .field.has-border {
   padding: 0px 0px 7px !important;
   margin: 8px 0px !important;
   border-bottom: 1px solid #f3f3f4 !important;
 }
-/* line 662, ../scss/layout.scss */
+/* line 682, ../scss/layout.scss */
 .field.no-border {
   padding: 0px !important;
   margin: 0px !important;
   border-bottom: 0 !important;
 }
 
-/* line 671, ../scss/layout.scss */
+/* line 691, ../scss/layout.scss */
 .optionset li {
   min-width: 220px;
   width: auto;
 }
-/* line 677, ../scss/layout.scss */
+/* line 697, ../scss/layout.scss */
 .optionset.full li {
   width: auto;
   margin-right: 2em;
 }
 
-/* line 685, ../scss/layout.scss */
+/* line 705, ../scss/layout.scss */
 .field-with-extra {
   float: left;
   margin-top: 0;
 }
-/* line 689, ../scss/layout.scss */
+/* line 709, ../scss/layout.scss */
 .field-with-extra input {
   width: 512px !important;
 }
 
-/* line 694, ../scss/layout.scss */
+/* line 714, ../scss/layout.scss */
 .field-extra {
   float: left;
   margin-top: 0;
@@ -598,73 +610,73 @@ select, select.dropdown {
   margin-bottom: 0;
 }
 
-/* line 703, ../scss/layout.scss */
+/* line 723, ../scss/layout.scss */
 .no-label label {
   display: none !important;
 }
-/* line 707, ../scss/layout.scss */
+/* line 727, ../scss/layout.scss */
 .no-label .middleColumn {
   margin-left: 0;
 }
 
-/* line 716, ../scss/layout.scss */
+/* line 736, ../scss/layout.scss */
 .fieldgroup-50 > * {
   float: left;
   width: 49.25%;
 }
-/* line 720, ../scss/layout.scss */
+/* line 740, ../scss/layout.scss */
 .fieldgroup-50 > *:nth-of-type(2n+2) {
   margin-left: 1.5%;
 }
-/* line 724, ../scss/layout.scss */
+/* line 744, ../scss/layout.scss */
 .fieldgroup-50 > *.full {
   width: 100%;
   margin-left: 0;
 }
-/* line 729, ../scss/layout.scss */
+/* line 749, ../scss/layout.scss */
 .fieldgroup-50 > *.left {
   margin-left: 0;
 }
-/* line 733, ../scss/layout.scss */
+/* line 753, ../scss/layout.scss */
 .fieldgroup-50 > *.right {
   margin-left: 1.5%;
 }
 
-/* line 743, ../scss/layout.scss */
+/* line 763, ../scss/layout.scss */
 .fieldgroup-33 > * {
   float: left;
   width: 32.33%;
 }
-/* line 747, ../scss/layout.scss */
+/* line 767, ../scss/layout.scss */
 .fieldgroup-33 > *:nth-of-type(2n+2), .fieldgroup-33 > *:nth-of-type(3n+3) {
   margin-left: 1.5%;
 }
-/* line 752, ../scss/layout.scss */
+/* line 772, ../scss/layout.scss */
 .fieldgroup-33 > *.full {
   width: 100%;
   margin-left: 0;
 }
-/* line 757, ../scss/layout.scss */
+/* line 777, ../scss/layout.scss */
 .fieldgroup-33 > *.left {
   margin-left: 0;
 }
-/* line 761, ../scss/layout.scss */
+/* line 781, ../scss/layout.scss */
 .fieldgroup-33 > *.right {
   margin-left: 1.5%;
 }
 
-/* line 769, ../scss/layout.scss */
+/* line 789, ../scss/layout.scss */
 .field-50.composite, .field-50.field {
   float: left;
   width: 49.25%;
   margin-top: 0;
 }
-/* line 775, ../scss/layout.scss */
+/* line 795, ../scss/layout.scss */
 .field-50.composite + .field-50, .field-50.field + .field-50 {
   margin-left: 1.5%;
 }
 
-/* line 783, ../scss/layout.scss */
+/* line 803, ../scss/layout.scss */
 .highlighted.composite {
   float: left;
   width: auto;
@@ -672,46 +684,46 @@ select, select.dropdown {
   padding: 16px;
   background: #f3f3f4;
 }
-/* line 790, ../scss/layout.scss */
+/* line 810, ../scss/layout.scss */
 .highlighted.composite > h2 {
   margin: 0 0 16px 0;
   line-height: 1;
 }
-/* line 796, ../scss/layout.scss */
+/* line 816, ../scss/layout.scss */
 .highlighted.field {
   color: #3ba1c7;
   font-weight: bold;
 }
 
-/* line 803, ../scss/layout.scss */
+/* line 823, ../scss/layout.scss */
 .chzn-container {
   width: 100% !important;
 }
 
-/* line 807, ../scss/layout.scss */
+/* line 827, ../scss/layout.scss */
 .chzn-container .chzn-drop {
   width: calc(100% - 2px) !important;
 }
 
-/* line 813, ../scss/layout.scss */
+/* line 833, ../scss/layout.scss */
 .cms-content-header.north .cms_backlink {
   display: none;
 }
 
-/* line 818, ../scss/layout.scss */
+/* line 838, ../scss/layout.scss */
 .better-buttons-utils,
 .dashboard-top-buttons {
   top: 12px !important;
 }
 
-/* line 827, ../scss/layout.scss */
+/* line 847, ../scss/layout.scss */
 .cms-login-status .logout-link {
   float: left;
   display: block;
   padding: 0;
   margin-right: 5px;
 }
-/* line 834, ../scss/layout.scss */
+/* line 854, ../scss/layout.scss */
 .cms-login-status span {
   display: block;
   float: left;
@@ -719,7 +731,7 @@ select, select.dropdown {
   width: calc(100% - 21px);
 }
 
-/* line 843, ../scss/layout.scss */
+/* line 863, ../scss/layout.scss */
 .LinkFormFieldLinkmode .chzn-container {
   width: 130px !important;
 }
