--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -1,6 +1,6 @@
 @import "_mixins";
 
-$action-color: #3ba1c7;
+$action-color: #ef7f1b;
 $action-color-hover: darken($action-color, 5%);
 $font-color: #465762;
 $font-color-light: #b2b7bb;
@@ -29,6 +29,14 @@ $orange: #E9B804;
 
   &:focus {
     outline: none !important;
+  }
+}
+
+.cms-logo-header span a {
+  color: $action-color;
+  
+  &:hover {
+    color: $action-color-hover;
   }
 }
 
