--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -2,7 +2,7 @@
 
 $action-color: #ef7f1b;
 $action-color-hover: darken($action-color, 5%);
-$font-color: #465762;
+$font-color: #2d3235;
 $font-color-light: #b2b7bb;
 $border-color: #f3f3f4;
 $border-color-dark: darken($border-color, 10%);
